<resources>
    <string name="app_name">Weather</string>

    <string name="tab_item_sort_by_alphabetic">A-Z</string>
    <string name="tab_item_sort_by_temperature">Temperature</string>
    <string name="tab_item_sort_by_last_update">Last updated</string>

    <string name="filter_button">Filter</string>

    <string name="update_success">Weather update success!</string>
    <string name="update_failure">Something wrong, please try again!</string>

    <string name="ok_button">Ok</string>

    <string name="country_selection_label">Select Country</string>
    <string name="weather_details_label">Weather details</string>

    <string name="weather_details_feels_like">Feels Like</string>
    <string name="weather_details_Humidity">Humidity</string>
    <string name="weather_details_wind">Wind</string>

</resources>