<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.yaorugang.weather.ui.fragments.WeatherReportsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/sorting_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/SortingTabText">

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_sort_by_alphabetic" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_sort_by_temperature" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_sort_by_last_update" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            weatherReports="@{viewModel.weatherReports}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_button"
            android:textAppearance="@style/FilterButton"
            android:onClick="@{() -> viewModel.onFilterButtonClick()}"/>

    </LinearLayout>

</layout>
